<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.view.AddPlaylistActivity">

    <EditText
        android:id="@+id/newPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="playlist_name"
        android:ems="10"
        android:hint="@string/playlist_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/generateLyricsCheckBox"
        style="@style/Text"
        android:text="@string/generateLyricsCheckBoxText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/clickOnASongToDeleteItTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_on_a_song_to_delete_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateLyricsCheckBox" />

    <Button
        android:id="@+id/confirmBtn"
        style="@style/GradientButton"
        android:layout_marginTop="8dp"
        android:onClick="createPlaylist"
        android:text="@string/create_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickOnASongToDeleteItTextView" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="136dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistName">

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_card_text2"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="@+id/frameLayout"
            tools:ignore="TouchTargetSizeCheck" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_playlist_creation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        tools:layout_editor_absoluteX="1dp"
        tools:listitem="@layout/song_item"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmBtn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Invisible view to help center the two EditText -->
            <View
                android:id="@+id/centerHelper"
                android:layout_height="0dp"
                android:layout_width="8dp"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/addSongToPlaylistSongName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/centerHelper"
                android:hint="@string/song_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/addSongToPlaylistArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/centerHelper"
                android:hint="@string/artist_name"
                android:inputType="text"
                android:importantForAutofill="no" />
        </RelativeLayout>

        <TextView
            android:id="@+id/addPlaylistErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336" />

        <Button
            android:id="@+id/addSongToPlaylistBtn"
            style="@style/GradientButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:onClick="addItems"
            android:text="@string/add_song" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>