<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SavePlaylistOnline"
        style="@style/Text.Popup"
        android:text="@string/saveOnlineQuestionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/quitOrStayLobbyLayout"
        style="@style/LinearLayoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SavePlaylistOnline">

        <Button
            android:id="@+id/saveOnlinePlaylistYes"
            style="@style/GradientButton.Popup"
            android:text="@string/yes" />

        <Button
            android:id="@+id/saveOnlinePlaylistNo"
            style="@style/GradientButton.Popup"
            android:text="@string/no" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>